# ai-camp-adk

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
lab1/: README.md  __init__.py  agent.py  root_agent.yaml
lab1_live/: README.md  __init__.py  agent.py
lab1_yaml/: README.md  __init__.py  root_agent.yaml
lab2_search/: README.md  __init__.py  agent.py
lab2_tools/: README.md  __init__.py  agent.py  tools.py
lab3/: README.md  __init__.py  agent.py  agent.py.bak  editor_agent.yaml  editor_agent.yaml.bak  researcher_agent.yaml  researcher_agent.yaml.bak  root_agent.yaml  root_agent.yaml.bak  writer_agent.yaml  writer_agent.yaml.bak
lab3_config/: README.md  __init__.py  editor_agent.yaml  editor_agent.yaml.bak  researcher_agent.yaml  researcher_agent.yaml.bak  root_agent.yaml  root_agent.yaml.bak  writer_agent.yaml  writer_agent.yaml.bak
lab4/: README.md  __init__.py  agent.py  agent.py.bak  root_agent.yaml  root_agent.yaml.bak  schemas.py
lab4a/: __init__.py  agent.py  schema.py
lab4b/: __init__.py  agent.py  schema.py
lab5/: README.md  __init__.py  agent.py  agent.py.bak  memory_tools.py  root_agent.yaml  root_agent.yaml.bak
lab6/: __init__.py  agent.py  agent.py.bak
lab7/: __init__.py  agent.py  agent.py.bak  callbacks.py
lab8/: __init__.py  agent.py  agent.py.bak
